# git-unneeded

./: .pre-commit-config.yaml  README.md  git_unneeded.py  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
tests/: conftest.py  test_commit_summary.py  test_main.py  test_output.py  test_repos.py
